# jamuna-bankline-shifting

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  LICENSE  README.md  distances.json  docker-compose.yml  pyproject.toml  skills-lock.json  start.bat  start.py  start.sh
.claude/: settings.json  settings.local.json
configs/: config.yaml
data/processed/eval_results/: tft_metrics_test.csv  tft_metrics_val.csv
dataset/: dataset.xlsx  proper-dataset.xlsx
frontend/: CLAUDE.md  Dockerfile  package.json  pnpm-lock.yaml
frontend/src/: CLAUDE.md
frontend/src/app/: globals.css  layout.js  page.js
frontend/src/components/: CLAUDE.md  Providers.js
frontend/src/lib/: CLAUDE.md  algorithms.js  api.js  parseValidationExcel.js  validationMetrics.js
frontend/src/store/: index.js
lightning_logs/version_52/: hparams.yaml
lightning_logs/version_747/: hparams.yaml
mlruns/0/: meta.yaml
mlruns/657172921160243461/: meta.yaml
models/: predictions_cache.json
scripts/: migrate_dataset.py
src/: CLAUDE.md  __init__.py  config.py
src/anomaly/: CLAUDE.md  autoencoder.py  changepoint.py
src/data/: CLAUDE.md  dataset.py  loader.py  preprocessing.py
src/models/: CLAUDE.md  baselines.py  tft_wrapper.py
src/serving/: CLAUDE.md  api.py  schemas.py
src/training/: CLAUDE.md  _baseline_trainer.py  evaluate.py  train.py  train_all_baselines.py  train_arima.py  train_elastic_net.py  train_exp_smoothing.py  train_gradient_boosting.py  train_knn.py  train_linear.py  train_persistence.py  train_rf.py  train_svr.py  train_xgboost.py  tune.py
(+1182 files in other folders)
